# rec_dataset_study

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml  start.sh
.github/workflows/: deploy-docs.yml
docs/: index.md
docs/aliccp/: index.md
docs/aliccp-benchmark/: index.md
docs/criteo/: index.md
docs/getting-started/: index.md
docs/javascripts/: mathjax.js
docs/stylesheets/: extra.css
docs/taobao/: index.md
notebooks/01_criteo_feature_crossing/: 01_data_exploration.ipynb  02_deepfm.ipynb  03_dcn.ipynb  04_comparison.ipynb
notebooks/01_criteo_feature_crossing/saved_models/: dcn_results.pkl  deepfm_results.pkl  final_comparison_results.pkl
notebooks/02_taobao_sequential/: 01_data_exploration.ipynb  02_din.ipynb  03_transformer.ipynb  04_comparison.ipynb
notebooks/03_tenrec_cvr/: 01_data_exploration.ipynb  02_esmm.ipynb  03_advanced_cvr.ipynb  04_comparison.ipynb
notebooks/04_aliccp_cvr/: 01_data_exploration.ipynb  02_esmm.ipynb  03_advanced_cvr.ipynb  04_comparison.ipynb
scripts/: create_aliccp_notebooks.py  download_data.py  improve_eda_notebooks.py  run_aliccp.py  run_aliccp_v2.py  run_bst_ablation.py  run_nb_direct.py  run_notebook.py  run_sasrec_ablation.py  run_sasrec_only.py  run_taobao_comparison.py  run_tenrec_comparison.py  run_transformer.py
