[project]
name = "rec-system-experimental"
version = "0.1.0"
description = "Experimental Recommendation Systems: Real-World Dataset Benchmarks — DeepFM/DCN on Criteo, DIN/Transformer on Taobao, ESMM on Ali-CCP"
readme = "docs/index.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }

dependencies = [
    # Documentation site
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-jupyter>=0.25.0",

    # Jupyter
    "jupyter>=1.1.0",
    "notebook>=7.2.0",
    "ipykernel>=6.29.0",
    "nbformat>=5.10.0",
    "nbconvert>=7.16.0",

    # Core ML
    "numpy>=1.26.0,<2",
    "matplotlib>=3.8.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    "scipy>=1.12.0",

    # Deep Learning (GPU)
    "torch>=2.1.0,<2.5",

    # Utils
    "tqdm>=4.66.0",
    "requests>=2.31.0",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "kaggle>=1.6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]
